--- a/index.ejs
+++ b/index.ejs
@@ -24,6 +24,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="app"></div>
+    <h1 style="text-align:center">Address Book</h1>
+    <main>
+      <div id="app"></div>
+    </main>
   </body>
 </html>
