--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,7 @@ body {
 
 main {
   background-color: #f8f2e2;
+  height: 300px;
   max-width: 600px;
   padding: 3px;
   border: 5px solid rgb(50, 50, 50);
@@ -42,13 +43,14 @@ h1 {
   font-family: Gandhi;
   background-color: #f8f2e2;
   overflow: auto;
-  border-radius: 5px;
+  border-radius: 0;
   box-shadow: 0 0 10px;
   padding-bottom: 0;
   display: flex;  
 }
 
 .page {
+  height: 290px;
   padding: 10px 0 10px 20px;
   width: 50%;
   margin: 0;
